--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Momentum - Progress Tracker</title>
   </head>
   <body class="text-dark-gray">
-    <div id="root"></div>
+    <div class="mx-auto max-w-[108.75rem] px-7.5" id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
